--- a/spenot/src/App.css
+++ b/spenot/src/App.css
@@ -448,34 +448,50 @@
 
 
 
-/* HTML: <div class="loader"></div> */
-.loader {
-  width: 232px;
-  height: 34px;
-  border-radius: 40px;
-  color: #f9fd00;
-  border: 2px solid;
+/*<span class="loader"></span> */
+.loader{
+  display: inline-block;
+  text-align: center;
+  line-height: 86px;
+  text-align: center;
   position: relative;
-  overflow: hidden;
+  padding: 0 48px;
+  font-size: 48px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fffb00;
+  }
+  .loader:before, .loader:after {
+    content: "";
+    display: block;
+    width: 15px;
+    height: 15px;
+    background: currentColor;
+    position: absolute;
+    animation: load .7s infinite alternate ease-in-out;
+    top: 0;
+  }
+  .loader:after {
+    top: auto;
+    bottom: 0;
+  }
+@keyframes load {
+  0% {
+    left: 0;
+    height: 43px;
+    width: 15px;
+    transform: translateX(0)
+  }
+  50% {
+    height: 10px;
+    width: 40px
+  }
+  100% {
+    left: 100%;
+    height: 43px;
+    width: 15px;
+    transform: translateX(-100%)
+  }
 }
-.loader::before {
-  content: "";
-  position: absolute;
-  margin: 2px;
-  width: 14px;
-  top: 0;
-  bottom: 0;
-  left: -20px;
-  border-radius: inherit;
-  background: currentColor;
-  box-shadow: -10px 0 12px 3px currentColor;
-  clip-path: polygon(0 5%, 100% 0,100% 100%,0 95%,-30px 50%);
-  animation: l14 1s infinite linear;
-}
-@keyframes l14 {
-  100% {left: calc(100% + 130px)}
-}
-
 
 
 
