--- a/spenot/src/App.css
+++ b/spenot/src/App.css
@@ -1030,8 +1030,7 @@
 }
 
 .studentsmanagement article {
-  width: 1200px;
-  height: 610px;
+ 
   background-color: #3D3D3D;
   display: flex;
   flex-direction: column;
@@ -1039,10 +1038,14 @@
   border: 3px solid gray;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   padding: 20px;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
-
+.studentsmanagement .table-container {
+  overflow-x: auto; /* Vízszintes görgetés engedélyezése */
+  -webkit-overflow-scrolling: touch; /* Az érintéses eszközökön simább görgetés */
+  margin: 0 auto; /* Középre igazítja a konténert */
+}
 
 
 #kuldes:active {
@@ -1102,9 +1105,25 @@
   height: 100vh;
 }
 
-.logspage article {
-  width: 1200px;
-  height: 610px;
+/* .studentsmanagement * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
+  color: white;
+}
+
+.studentsmanagement {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 300% 300%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.studentsmanagement article {
+ 
   background-color: #3D3D3D;
   display: flex;
   flex-direction: column;
@@ -1112,8 +1131,53 @@
   border: 3px solid gray;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   padding: 20px;
-  overflow: hidden;
+  /* overflow: hidden; */
+
+
+
+
+
+.logspage article {
+  background-color: #3D3D3D;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  border: 3px solid gray;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+ 
 }
+
+.szures {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+#nemkaptaebbenahonapban, #legutoljarapenzugy, #kimaradtkikuldesek, #hanypdfkuldesegyevben, #sohanemkapottpfdet {
+  background-color: #5f9ea0;
+  color: #ffffff;
+  padding: 12px 15px;
+  font-size: 16px;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  margin: 10px;
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.15);
+  border: none;
+  font-weight: bold;
+}
+
+#nemkaptaebbenahonapban:hover, #legutoljarapenzugy:hover, #kimaradtkikuldesek:hover, #hanypdfkuldesegyevben:hover, #sohanemkapottpfdet:hover {
+  background-color: #e74c3c;
+  transform: translateY(-2px) scale(1.1);
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+#nemkaptaebbenahonapban:active, #legutoljarapenzugy:active, #kimaradtkikuldesek:active, #hanypdfkuldesegyevben:active, #sohanemkapottpfdet:active{
+  transform: scale(0.92);
+}
+
+
 
 .logspage h1 {
   background-color: lightslategrey;
