Logs névszűrés, pdf szűrés, asyncrequest meghatározása

--- a/spenot/src/App.css
+++ b/spenot/src/App.css
@@ -1055,6 +1055,13 @@ text-align: center;
 }
 
 
+.nszInput{
+  color: black;
+}
+
+.nevSzures{
+   margin-top: 15px;
+}
 
 .logspage .table-container {
   overflow-x: auto;
