--- a/spenot/src/App.css
+++ b/spenot/src/App.css
@@ -26,12 +26,11 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 6%;
   height: 100vh;
 }
 
 .emailsendpage article {
-  width: 1200px;
+  width: 100%;
   height: 610px;
   background-color: #3D3D3D;
   display: flex;
@@ -40,7 +39,14 @@ html, body {
   border: 3px solid gray;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   padding: 20px;
+  margin: 2%;
+  margin-bottom: 15%;
 }
+
+.emailsendpage article .top #emailSend{
+  margin-right: 100px;
+}
+
 
 #emailSend, #pdftorles, #fajlkivalasztas, #athelyezes, #kuldes {
   background-color: #5f9ea0;
@@ -158,14 +164,14 @@ html, body {
 
 @media (max-width: 1200px) {
   .emailsendpage article {
-    width: 100%;
+    width: auto;
     height: auto;
+    margin-bottom: 20%;
   }
   
   #emailSend, #pdftorles, #fajlkivalasztas, #athelyezes, #kuldes  {
-    width: 100%;
+    width: 40%;
     font-size: 14px;
-    padding: 10px 12px;
   }
 
   #torlesGomb {
@@ -178,12 +184,20 @@ html, body {
   .emailsendpage {
     flex-direction: column; 
     justify-content: flex-start;
+    overflow-y: scroll;
   }
-  
+
+  .emailsendpage::-webkit-scrollbar {
+    display: none;
+  }
+
   .emailsendpage article {
-    padding: 15px;
-    width: 90%;
-    height: auto;
+    margin: 10%;
+    margin-bottom: 30%;
+  }
+
+  .emailsendpage article .top #emailSend{
+    margin-right: 10px;
   }
   
   #emailSend, #pdftorles, #fajlkivalasztas, #athelyezes, #kuldes  {
@@ -209,8 +223,16 @@ html, body {
 
 @media (max-width: 480px) {
   .emailsendpage article {
-    width: 100%;
+    width: auto;
     height: auto;
+  }
+
+  .emailsendpage h1 {
+    font-size: 6vw;
+  }
+
+  .emailsendpage .bottom p {
+    font-size: 14px;
   }
 
   #emailSend, #pdftorles, #fajlkivalasztas, #athelyezes, #kuldes  {
@@ -219,7 +241,6 @@ html, body {
     padding: 6px 8px;
   }
 }
-
 
 
 
