--- a/spenot/src/App.css
+++ b/spenot/src/App.css
@@ -951,8 +951,12 @@ html, body {
   padding: 0;
   font-family: 'Arial', sans-serif;
   color: white;
+  max-width: 100%;
 }
   
+.studentsmanagement {
+  max-width: 100%;
+}
 .studentsmanagement {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   background-size: 300% 300%;
@@ -1251,7 +1255,9 @@ text-align: center;
   padding: 0;
   font-family: 'Arial', sans-serif;
   color: white;
+  max-width: 100%;
 }
+
 
 .logspage {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
